fix(CountrySelect): height of input shrinks while full-screen dropdown visible
Height got smaller when input contained only white spaces

--- a/form/form.css
+++ b/form/form.css
@@ -102,7 +102,7 @@ form {
 .form-field input,
 .selected-display {
   width: 250px;
-  height: 36px;
+  min-height: 36px;
   padding-left: 0.5rem;
   color: hsl(var(--clr-text));
   background-color: transparent;
